fix(ci): use github actions + npm7/lockv2 (#1)
* fix(ci): use github actions

Signed-off-by: Patrick Lee Scott <pat@patscott.io>

fix(ci): optional lint

Signed-off-by: Patrick Lee Scott <pat@patscott.io>

fix(ci): mongodb action

Signed-off-by: Patrick Lee Scott <pat@patscott.io>

fix(ci): dont use docker-compose and mongo action

Signed-off-by: Patrick Lee Scott <pat@patscott.io>

fix(ci): mongo 4.2

Signed-off-by: Patrick Lee Scott <pat@patscott.io>

fix(ci): mongo default

Signed-off-by: Patrick Lee Scott <pat@patscott.io>

fix(ci): mongo default

Signed-off-by: Patrick Lee Scott <pat@patscott.io>

fix(ci): revert package upgrades

Signed-off-by: Patrick Lee Scott <pat@patscott.io>

fix(ci): release

Signed-off-by: Patrick Lee Scott <pat@patscott.io>

fix(ci): short sleep for mongo

Signed-off-by: Patrick Lee Scott <pat@patscott.io>

* fix: prep for sr

Signed-off-by: Patrick Lee Scott <pat@patscott.io>

* fix: rm node workflow

Signed-off-by: Patrick Lee Scott <pat@patscott.io>

* fix: semantic release + npm 7 + package-lock v2

Signed-off-by: Patrick Lee Scott <pat@patscott.io>

--- a/package.json
+++ b/package.json
@@ -7,23 +7,25 @@
     "test": "test"
   },
   "dependencies": {
-    "debug": "4.3.1",
-    "lodash": "4.17.21",
-    "mongodb": "3.6.9",
+    "debug": "4.1.1",
+    "lodash": "4.17.15",
+    "mongodb": "3.5.7",
     "sourced": "2.0.8"
   },
   "devDependencies": {
-    "jest": "27.0.4",
-    "mocha": "9.0.0",
-    "should": "13.2.3"
+    "jest": "26.0.1",
+    "mocha": "7.2.0",
+    "should": "13.2.3",
+    "semantic-release": "^17.4.4"
   },
   "scripts": {
     "test": "mocha test -R spec --exit",
-    "jest": "jest --coverage --forceExit"
+    "jest": "jest --coverage --forceExit",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mateodelnorte/sourced-repo-mongo.git"
+    "url": "https://github.com/CloudNativeEntrepreneur/sourced-repo-mongo.git"
   },
   "keywords": [
     "sourced",
@@ -34,7 +36,7 @@
   "author": "mattwalters5@gmail.com",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mateodelnorte/sourced-repo-mongo/issues"
+    "url": "https://github.com/CloudNativeEntrepreneur/sourced-repo-mongo/issues"
   },
-  "homepage": "https://github.com/mateodelnorte/sourced-repo-mongo"
+  "homepage": "https://github.com/CloudNativeEntrepreneur/sourced-repo-mongo"
 }
