--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "test": "test"
   },
   "dependencies": {
-    "debug": "4.1.1",
-    "lodash": "4.17.15",
-    "mongodb": "3.5.7",
-    "sourced": "2.0.8"
+    "debug": "4.3.2",
+    "lodash": "4.17.21",
+    "mongodb": "3.6.10",
+    "sourced": "2.0.9"
   },
   "devDependencies": {
-    "jest": "26.0.1",
+    "jest": "26.6.3",
     "mocha": "7.2.0",
     "should": "13.2.3",
-    "semantic-release": "^17.4.4"
+    "semantic-release": "17.4.4"
   },
   "scripts": {
     "test": "mocha test -R spec --exit",
