--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "5.1.0",
     "eslint-plugin-standard": "4.1.0",
-    "jest": "26.6.3",
-    "mocha": "7.2.0",
-    "should": "13.2.3",
-    "semantic-release": "17.4.4"
+    "jest": "27.0.6",
+    "mocha": "8.4.0",
+    "semantic-release": "17.4.4",
+    "should": "13.2.3"
   },
   "scripts": {
     "lint": "eslint . --ext=.js,.mjs",
